# dprio

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  measurements-2021-11-04.csv  measurements-2022-03-09.csv  measurements-2022-03-23.csv  measurements-2022-06-01.csv  measurements-2022-10-11.csv  measurements-2022-10-28.csv  measurements-2022-11-01.csv  notes  run.py
examples/: comparison-cli.yaml  comparison.rs  sample.rs
src/: laplace.rs  lib.rs
