[package]
name = "dprio"
version = "0.1.0"
authors = ["Dana Keeler <dkeeler@mozilla.com>"]
edition = "2018"

[dependencies]
byteorder = "1.4"
libm = "0.2"
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
clap = "3.1"
prio = { git = "Https://github.com/mozkeeler/libprio-rs", branch = "sum" }

[[example]]
name = "comparison"
